[package]
name = "suave-nft-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
dotenvy = "0.15.7"
ethers = "2.0.14"
lazy_static = "1.4.0"
serde = { version = "1.0.200", features = ["serde_derive"] }
serde_json = "1.0.116"
